--- a/public/style.css
+++ b/public/style.css
@@ -24,16 +24,20 @@ body {
 }
 
 #subtext{
-    font-size: 50px;
-}
-#instructions {
     font-size: 30px;
+    font-family: 'Didact Gothic', sans-serif;
+}
+#prompt {
+    font-size: 50px;
+    font-family: 'Didact Gothic', sans-serif;
 }
 
 #instructions {
     display: flex;
     flex-direction: column;
     position: absolute;
+    justify-content: center;
+    align-items: center;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -59,6 +63,8 @@ body {
     border: none;
     border-radius: 5px;
     cursor: pointer;
+    width:fit-content;
+box-sizing: border-box;
 }
 
 .button:hover {
